프로필 정보 서버에서 받아오기

--- a/salguy/tsconfig.json
+++ b/salguy/tsconfig.json
@@ -3,5 +3,9 @@
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
-  ]
+  ],
+  "compilerOptions": {
+    "jsx": "react-jsx",       // ✅ 또는 "react"
+    "lib": ["DOM", "ESNext"], // ✅ DOM 필수!
+  }
 }
